@@ -135,3 +135,12 @@
 
 	* Fixes:
 	    - clean up bitrot in parser tests (Leo Toetsch)
+
+2002-08-09
+
+	* Fixes:
+	    - clean up throw/CATCH (Leo -- a good use for weird
+	      Continuation objects)
+
+	* Additions:
+	    - @ARGS, at last.
